secGP.tf
resource "aws_security_group" "allow_http" {
  name= "allow_tls"
  description = "Allow TLS inbound traffic"
  vpc_id      = "${aws_vpc.Hmain.id}"


ingress {
    description      = "TLS from VPC"
    from_port= 80
    to_port= 80
    protocol= "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }
  ingress {
description = "allow ssh"
from_port = 22
to_port = 22
protocol = "tcp"
cidr_blocks = ["0.0.0.0/0"]
  }


egress {
    from_port= 0
    to_port= 0
    protocol= "-1"
    cidr_blocks      = ["0.0.0.0/0"]
  }
  
  tags = {
Name = "allow_http"
}
}
